<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="planets_array">
        <item>Profile</item>
        <item>Games</item>
        <item>Ranking</item>
        <item>Logout</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_name">UBet</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_secondname">Second Name</string>
    <string name="prompt_birthday">What\'s your birthday date?</string>
    <string name="hello_world">Hello world!</string>
    <string name="loading_message">Loading...</string>
    <string name="missing_username">Missing Username</string>
    <string name="missing_password">Missing Password</string>
    <string name="missing_firstname">Missing First Name</string>
    <string name="missing_secondname">Missing Second Name</string>
    <string name="missing_email">Missing Email</string>
    <string name="login_fail">Could not authenticate user! Try Again!</string>
    <string name="ui_authenticating">Checking your credentials! Be Patience!</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_room">Room</string>
    <string name="title_activity_ranking">Ranking</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_my_rooms">My Rooms</string>

    <!-- Rooms Activity Strings -->
    <string name="title_activity_rooms">Rooms</string>
    <string name="textView_rooms">Rooms</string>
    <string name="button_profile">Profile</string>
    <string name="button_ranking">Ranking</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_add_group">Add Group</string>
    <string name="menu_item_logout">Logout</string>
    <string name="loading_progress_message">Loading...</string>
    <string name="register_room">Enter Room</string>

    <!-- Create Room Activity Strings -->
    <string name="create_room_name">Room Name</string>
    <string name="create_room_password">Room Password</string>
    <string name="create_room_price_room">Room Price</string>
    <string name="create_room_price_extra">Extra bet\'s price</string>
    <string name="create_room_lim_extra">Room Extra Limit</string>
    <string name="missing_room_name">Missing Room Name</string>
    <string name="missing_room_password">Missing Room Password</string>
    <string name="missing_room_price_room">Missing Price Room</string>
    <string name="missing_room_price_extra">Missing Extra Bet\'s Price</string>
    <string name="missing_room_lim_extra">Missing Extra Bet\'s limit</string>

    <!-- Error's handling messages! -->
    <string name="erro0"></string>
    <string name="erro1"></string>
    <string name="one_account_allowed">One Account Allowed</string>
    <string name="erro3">Username already exists!</string>
    <string name="erro4">Email already exists!</string>
    <string name="erro5">Invalid email!</string>
    <string name="erro6">Invalid username!</string>
    <string name="erro7">All right bro!</string>
    <string name="erro8">Connection error!</string>
    <string name="erro9">Unknown error!</string>
    <string name="erro10">Server is down!</string>
    <string name="erro11">Internal Error</string>
    <string name="erro12">Internal Error!</string>
    <string name="erro13">Invalid name!</string>
    <string name="erro14">Invalid password!</string>
    <string name="erro15">User does not exist!</string>
    <string name="erro16">Invalid type!</string>
    <string name="erro17">Invalid admin user!</string>
    <string name="erro18">Invalid price room!</string>
    <string name="erro19">Invalid status!</string>
    <string name="erro20">Room already exists!</string>
    <string name="erro21">Invalid room!</string>
    <string name="erro22">Invalid game!</string>
    <string name="erro23">Invalid round!</string>
    <string name="erro24">Invalid player!</string>
    <string name="erro25">Rooms limit exceeded!</string>
    <string name="erro26">Internal error!</string>
    <string name="erro27">Insuficient Coins</string>
    <string name="erro28">Request unauthorized!</string>
    <string name="erro29">Lim extra bets exceeded!</string>
    <string name="erro30">Invalid Room</string>
    <string name="erro31">Time is up!</string>
    <string name="title_activity_create_room">Create Room</string>
    <string name="title_activity_room_inside">Room</string>
    <string name="title_activity_bets">Games</string>
    <string name="title_activity_make_bet">Make Bet</string>
    <string name="title_activity_room_info">Room Info</string>

</resources>
