<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ubet.CreateRoomActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/create_room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/create_room_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="90dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/create_room_price_extra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/create_room_price_extra"
        android:layout_alignLeft="@+id/create_room_price_room"
        android:layout_below="@+id/create_room_price_room"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/create_room_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/create_room_password"
        android:layout_alignLeft="@+id/create_room_name"
        android:layout_below="@+id/create_room_name"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/create_room_price_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/create_room_price_room"
        android:layout_alignLeft="@+id/create_room_password"
        android:layout_below="@+id/create_room_password"
        android:ems="10"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/create_room_lim_extra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/create_room_lim_extra"
        android:layout_alignLeft="@+id/create_room_price_extra"
        android:layout_below="@+id/create_room_price_extra"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/create_room_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_room_lim_extra"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="Go!"
        android:onClick="createRoom" />


</RelativeLayout>
