<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
 
    <ListView
        android:id="@+id/listView_rooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_ranking"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp" >
    </ListView>

    <TextView
        android:id="@+id/textView_rooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_ranking"
        android:layout_centerHorizontal="true"
        android:text="@string/textView_rooms"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/button_profile" 
        android:onClick="goProfile"/>

    <Button
        android:id="@+id/button_ranking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/button_ranking"
        android:onClick="goRanking"/>
 
</RelativeLayout>